nginx/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.nginx.lab.felopater.codes`)
      kind: Rule
      services:
        - name: nginx
          port: 80
    - match: Host(`nginx.lab.felopater.codes`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: nginx
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: lab-felopater-codes-production-tls
